--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tldr">tldr</string>
     <string name="man">man</string>
     <string name="provided">Provided by package: %s</string>
+    <string name="next">Next</string>
 </resources>
