Preparing to add lists of completed and not yet completed commands.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="tldr">tldr</string>
     <string name="man">man</string>
     <string name="provided">Provided by package: %s</string>
+    <string name="not_provided">Not provided by a package</string>
     <string name="next">Next</string>
 </resources>
