--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,14 +1,13 @@
 <resources>
     <string name="app_name">Daily Unix</string>
     <string name="channel_name">Command of the day</string>
+    <string name="close">close</string>
     <string name="completed">Completed</string>
     <string name="tldr">tldr</string>
     <string name="man">man</string>
+    <string name="open">open</string>
     <string name="provided">Provided by package: %s</string>
     <string name="not_provided">Not provided by a package</string>
     <string name="next">Next</string>
     <string name="remaining">Remaining</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
