--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Daily Unix</string>
+    <string name="bookmarked">Bookmarked</string>
     <string name="channel_name">Command of the day</string>
     <string name="close">close</string>
     <string name="completed">Completed</string>
